objects/ssot__ProviderVisitRequestedSample__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualDeliveryDate__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryStatus__c</fullName>
        <label>Delivery Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistributorName__c</fullName>
        <label>Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedDeliveryDate__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Visit Requested Sample Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCalcForDirToPhysician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculated For Direct To Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsTrackedForSmplTrxnLimit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracked For Sample Transaction Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__OrderTrackingIdentifier__c</fullName>
        <label>Order Tracking Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitId__c</fullName>
        <label>Provider Visit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedQuantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShippedQuantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingDate__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationType__c</fullName>
        <label>Violation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WarningMessage__c</fullName>
        <label>Warning Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561370248_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitRequestedSample_Provide_rel</label>
        <referenceTo>ssot__ProviderVisit__dlm</referenceTo>
        <relationshipLabel>ProviderVisitRequestedSample_Provide_rel</relationshipLabel>
        <relationshipName>rel_1745561370248_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561375516_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitRequestedSample_Product_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProviderVisitRequestedSample_Product_rel</relationshipLabel>
        <relationshipName>rel_1745561375516_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>